gcc/testsuite/g++.dg/modules/atom-preamble-1.C
// { dg-additional-options -fmodules-atom }

#define EXPORT export
EXPORT module bob; // { dg-error "must be first declaration of" }
